# uniffi-it

./: .gitignore  Cargo.toml  README.md
kotlin_client/: README.md  build.gradle.kts  settings.gradle.kts
kotlin_client/src/main/kotlin/: Coroutine.kt  Main.kt
src/: lib.rs
