[package]
name = "tmp4"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "arithmetic"

[dependencies]
uniffi = { version = "0.30.0", features = ["cli"] }
thiserror = "2.0"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
